[package]
name = "libgraph"
version = "0.1.0"
edition = "2021"
authors = ["Evgeny Baranov <amazing-hash@eyandex.ru>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsu = {git = "https://github.com/mingendo/dsu.git", branch="main"}
